<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/tv_usuario_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tw_name"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"

        />

    <EditText
        android:id="@+id/et_usuario"
        android:layout_below="@id/tv_usuario_label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:nextFocusDown="@id/et_senha"
        />

    <TextView
        android:id="@+id/tv_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tw_senha"
        android:textSize="30sp"
        android:layout_below="@id/tv_usuario_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"

        />

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_senha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_senha"
        android:layout_marginTop="50dp"
        android:text="@string/btn_acessar"
        android:textSize="30sp"/>

</RelativeLayout>